enabled celery for processing pred
