# asl-api/swagger.yaml
@@ -12,12 +12,12 @@ basePath: "{{is_testing}}/api"
 paths:
   /predict:
     post:
-      summary: returns prediction given an image
-      operationId: apiHandler.predict_image
+      summary: kicks off prediction job for given image
+      operationId: apiHandler.predict_image_endpoint
       tags:
         - "prediction"
       description: |
-        Returns an alphabet
+        Returns a job UUID
       consumes:
          - multipart/form-data
       parameters:
@@ -25,6 +25,34 @@ paths:
            in: formData
            description: The image to be uploaded
            type: file
+           required: true
+      produces:
+      - application/json
+      responses:
+        200:
+          description: prediction obj
+          schema:
+            type: object
+            items:
+              type: object
+              $ref: '#/definitions/jobid'
+        400:
+          description: bad input parameter
+  /job:
+    post:
+      summary: returns current prediction job status
+      operationId: apiHandler.get_job
+      tags:
+        - "prediction"
+      description: |
+        returns current prediction job status
+      consumes:
+         - multipart/form-data
+      parameters:
+         - name: id
+           in: formData
+           description: job id
+           type: string
            required: true
       produces:
       - application/json
@@ -59,6 +87,12 @@ paths:
         400:
           description: bad input parameter
 definitions:
+  jobid:
+    type: object
+    properties:
+      id:
+        type: string
+        example: 123
   prediction:
     type: object
     properties:
